2006-10-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/shaper.erl: Bugfix
	* src/ejabberd_config.erl: Likewise

	* src/ejabberd_frontend_socket.erl: Support for frontend
	connection manager
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_listener.erl: Likewise
	* src/ejabberd_s2s_in.erl: Likewise
	* src/ejabberd_service.erl: Likewise
	* src/ejabberd_socket.erl: Likewise
	* src/web/ejabberd_http_poll.erl: Likewise

2006-09-27  Mickael Remond  <mickael.remond@process-one.net>

	* doc/release_notes_1.1.2.txt: Minor fixes.

	* doc/guide.tex: Fixed Latexish typos.

2006-09-26  Mickael Remond  <mickael.remond@process-one.net>

	* doc/release_notes_1.1.2.txt: Draft release notes.
	
	* src/msgs/pl.msg: Updated (thanks to Andrzej Smyk).

	* src/ejabberd_s2s.erl: More precise message for the new s2s
	statistic command.
	
	* src/mod_muc/mod_muc_room.erl: Minor english update.
	* src/msgs/pl.msg: Likewise.
	* src/msgs/uk.msg: Likewise.
	* src/msgs/pt-br.msg: Likewise.
	* src/msgs/cs.msg: Likewise.
	* src/msgs/ru.msg: Likewise.
	* src/msgs/es.msg: Likewise.
	* src/msgs/fr.msg: Likewise.
	* src/msgs/de.msg: Likewise.
	* src/msgs/nl.msg: Likewise.

	* src/msgs/pt-br.msg: Updated Brazilian translation (thanks to
	Renato Botelho) and clean-up.

2006-09-25  Mickael Remond  <mickael.remond@process-one.net>

	* src/msgs/de.msg: Updated German translation (thanks to Nikolaus
	Polak).

	* src/ejabberd.app: Version update for ejabberd 1.1.2.

	* src/msgs/pl.msg: Updated Polish translation (thanks to Zbyszek
	Zolkiewski).

	* src/msgs/de.msg: Updated German translation (thanks to Marvin
	Preuss).

	* src/msgs/nl.msg: Updated Dutch translation (thanks to Sander
	 Devrieze).

	* src/msgs/cs.msg: Updated Czech translation and removed unused
	 strings.

	* doc/introduction.tex: Minor doc updates for release 1.1.2.

2006-09-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Added incoming-s2s-number and
	outgoing-s2s-number ejabberdctl commands
