@@ -1,3 +1,8 @@
+2006-10-05  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/mod_privacy.erl: Use hooks instead of direct function calls
+	* src/ejabberd_c2s.erl: Updated
+
 2006-10-01  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/shaper.erl: Bugfix
